--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,12 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<header>
+<div class="container">
+  <div class="card-panel purple darken-4">
+    <a href="#/"><h5 class="white-text center">TODO LIST</h5></a>
+  </div>
+</div>
+</header>
+<main>
+  <div class="container">
+    {{outlet}}
+  </div>
+</main>
